# remibot-console

./: .gitignore  AGENTS.md  README.md  kitchen_arm_gui.py  requirements-mujoco.txt
assets/mujoco/: kitchen_arm.xml
assets/mujoco/meshes/: link1.STL
data/: config.yaml  tools.json  waypoints.json
docs/: github_and_jetson_deployment.md  master_development_plan.md  operator_console_product_architecture.md  ros2_bringup_integration.md
qt_operator_console/: README.md  requirements.txt  run_qt_console.py
qt_operator_console/kitchen_qt/: config.py  models.py  storage.py
qt_operator_console/kitchen_qt/backend/: __init__.py  base.py  mock.py  ros2.py
qt_operator_console/kitchen_qt/ui/: __init__.py  main_window.py  theme.py
qt_operator_console/kitchen_qt/ui/widgets/: frame_view.py  mujoco_viewport.py  plot.py
ros2_ws_packages/: start_remibot_system.sh  workspace.gitignore
ros2_ws_packages/remibot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws_packages/remibot_bringup/launch/: kitchen_arm_system.launch.py
ros2_ws_packages/remibot_bringup/remibot_bringup/: __init__.py
ros2_ws_packages/remibot_console/: package.xml  setup.cfg  setup.py
ros2_ws_packages/remibot_console/assets/mujoco/: kitchen_arm.xml
ros2_ws_packages/remibot_console/kitchen_qt/: __init__.py  app.py  config.py  models.py
ros2_ws_packages/remibot_console/kitchen_qt/backend/: base.py  ros2.py
ros2_ws_packages/remibot_console/kitchen_qt/ui/: main_window.py  theme.py
ros2_ws_packages/remibot_console/remibot_console/: __init__.py  rviz_capture_renderer.py  visualization_renderer.py
(+8 files in other folders)
